Added conversion to mips

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,4 @@ project(CompilerMB)
 set(CMAKE_CXX_STANDARD 14)
 
 add_executable(CompilerMB
-        Lexer.cpp main.cpp lrParser.cpp)
+        Lexer.cpp main.cpp lrParser.cpp compiler.cpp)
